# YoutubeCore

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  downloader.h  extracts.h  helper.h  parse_url.h  split_url.h  tube.h  url_grammer.txt  youtube_interface.h
include/httplib/: httplib.h
include/openssl/: opensslconf.h
include/rapidjson/: document.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  downloader.cpp  extracts.cpp  parse_url.cpp  split_url.cpp  tube.cpp  youtube_interface.cpp
